# ROSsell

./: .gitignore  README.md  catkinoutput.make  frames.gv  kinetic_file_placer.sh
src/: .gitignore
src/finalProj/: CMakeLists.txt  package.xml
src/finalProj/src/: exploreNode.cpp  obRec.cpp  testNode.cpp
src/finalproj/: CMakeLists.txt  package.xml
src/finalproj/launch/: ptCloud.launch
src/finalproj/src/: burntoground.txt  coruNode.cpp  eucliead.txt  experiment.txt  exploreNode.cpp  obRec.cpp  okayidk.txt  rec.cpp  testNode.cpp
src/launch/: roboNode.launch
